Update Theme (Default, Blue)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_light_primary_default">#6750A4</color>
+    <color name="md_theme_light_onPrimary_default">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer_default">#EADDFF</color>
+    <color name="md_theme_light_onPrimaryContainer_default">#21005D</color>
+    <color name="md_theme_light_secondary_default">#625B71</color>
+    <color name="md_theme_light_onSecondary_default">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer_default">#E8DEF8</color>
+    <color name="md_theme_light_onSecondaryContainer_default">#1D192B</color>
+    <color name="md_theme_light_tertiary_default">#7D5260</color>
+    <color name="md_theme_light_onTertiary_default">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer_default">#FFD8E4</color>
+    <color name="md_theme_light_onTertiaryContainer_default">#31111D</color>
+    <color name="md_theme_light_error_default">#B3261E</color>
+    <color name="md_theme_light_errorContainer_default">#F9DEDC</color>
+    <color name="md_theme_light_onError_default">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer_default">#410E0B</color>
+    <color name="md_theme_light_background_default">#FFFBFE</color>
+    <color name="md_theme_light_onBackground_default">#1C1B1F</color>
+    <color name="md_theme_light_surface_default">#FFFBFE</color>
+    <color name="md_theme_light_onSurface_default">#1C1B1F</color>
+    <color name="md_theme_light_surfaceVariant_default">#E7E0EC</color>
+    <color name="md_theme_light_onSurfaceVariant_default">#49454F</color>
+    <color name="md_theme_light_outline_default">#79747E</color>
+    <color name="md_theme_light_inverseOnSurface_default">#F4EFF4</color>
+    <color name="md_theme_light_inverseSurface_default">#313033</color>
+    <color name="md_theme_light_inversePrimary_default">#D0BCFF</color>
+    <color name="md_theme_light_shadow_default">#000000</color>
+    <color name="md_theme_light_primaryInverse_default">#D0BCFF</color>
+    <color name="md_theme_dark_primary_default">#D0BCFF</color>
+    <color name="md_theme_dark_onPrimary_default">#381E72</color>
+    <color name="md_theme_dark_primaryContainer_default">#4F378B</color>
+    <color name="md_theme_dark_onPrimaryContainer_default">#EADDFF</color>
+    <color name="md_theme_dark_secondary_default">#CCC2DC</color>
+    <color name="md_theme_dark_onSecondary_default">#332D41</color>
+    <color name="md_theme_dark_secondaryContainer_default">#4A4458</color>
+    <color name="md_theme_dark_onSecondaryContainer_default">#E8DEF8</color>
+    <color name="md_theme_dark_tertiary_default">#EFB8C8</color>
+    <color name="md_theme_dark_onTertiary_default">#492532</color>
+    <color name="md_theme_dark_tertiaryContainer_default">#633B48</color>
+    <color name="md_theme_dark_onTertiaryContainer_default">#FFD8E4</color>
+    <color name="md_theme_dark_error_default">#F2B8B5</color>
+    <color name="md_theme_dark_errorContainer_default">#8C1D18</color>
+    <color name="md_theme_dark_onError_default">#601410</color>
+    <color name="md_theme_dark_onErrorContainer_default">#F9DEDC</color>
+    <color name="md_theme_dark_background_default">#1C1B1F</color>
+    <color name="md_theme_dark_onBackground_default">#E6E1E5</color>
+    <color name="md_theme_dark_surface_default">#1C1B1F</color>
+    <color name="md_theme_dark_onSurface_default">#E6E1E5</color>
+    <color name="md_theme_dark_surfaceVariant_default">#49454F</color>
+    <color name="md_theme_dark_onSurfaceVariant_default">#CAC4D0</color>
+    <color name="md_theme_dark_outline_default">#938F99</color>
+    <color name="md_theme_dark_inverseOnSurface_default">#1C1B1F</color>
+    <color name="md_theme_dark_inverseSurface_default">#E6E1E5</color>
+    <color name="md_theme_dark_inversePrimary_default">#6750A4</color>
+    <color name="md_theme_dark_shadow_default">#000000</color>
+    <color name="md_theme_dark_primaryInverse_default">#6750A4</color>
+
+    <color name="md_theme_light_primary_blue">#006A65</color>
+    <color name="md_theme_light_onPrimary_blue">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer_blue">#71F7EF</color>
+    <color name="md_theme_light_onPrimaryContainer_blue">#00201E</color>
+    <color name="md_theme_light_secondary_blue">#4A6361</color>
+    <color name="md_theme_light_onSecondary_blue">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer_blue">#CCE8E5</color>
+    <color name="md_theme_light_onSecondaryContainer_blue">#051F1E</color>
+    <color name="md_theme_light_tertiary_blue">#48607A</color>
+    <color name="md_theme_light_onTertiary_blue">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer_blue">#CFE4FF</color>
+    <color name="md_theme_light_onTertiaryContainer_blue">#001D34</color>
+    <color name="md_theme_light_error_blue">#BA1B1B</color>
+    <color name="md_theme_light_errorContainer_blue">#FFDAD4</color>
+    <color name="md_theme_light_onError_blue">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer_blue">#410001</color>
+    <color name="md_theme_light_background_blue">#FBFDFC</color>
+    <color name="md_theme_light_onBackground_blue">#191C1C</color>
+    <color name="md_theme_light_surface_blue">#FBFDFC</color>
+    <color name="md_theme_light_onSurface_blue">#191C1C</color>
+    <color name="md_theme_light_surfaceVariant_blue">#DAE5E3</color>
+    <color name="md_theme_light_onSurfaceVariant_blue">#3F4947</color>
+    <color name="md_theme_light_outline_blue">#6F7978</color>
+    <color name="md_theme_light_inverseOnSurface_blue">#EFF1F0</color>
+    <color name="md_theme_light_inverseSurface_blue">#2D3130</color>
+    <color name="md_theme_light_inversePrimary_blue">#4FDAD2</color>
+    <color name="md_theme_light_shadow_blue">#000000</color>
+    <color name="md_theme_light_primaryInverse_blue">#4FDAD2</color>
+    <color name="md_theme_dark_primary_blue">#4FDAD2</color>
+    <color name="md_theme_dark_onPrimary_blue">#003734</color>
+    <color name="md_theme_dark_primaryContainer_blue">#00504C</color>
+    <color name="md_theme_dark_onPrimaryContainer_blue">#71F7EF</color>
+    <color name="md_theme_dark_secondary_blue">#B1CCC9</color>
+    <color name="md_theme_dark_onSecondary_blue">#1B3533</color>
+    <color name="md_theme_dark_secondaryContainer_blue">#324B49</color>
+    <color name="md_theme_dark_onSecondaryContainer_blue">#CCE8E5</color>
+    <color name="md_theme_dark_tertiary_blue">#B0C9E7</color>
+    <color name="md_theme_dark_onTertiary_blue">#19324A</color>
+    <color name="md_theme_dark_tertiaryContainer_blue">#304962</color>
+    <color name="md_theme_dark_onTertiaryContainer_blue">#CFE4FF</color>
+    <color name="md_theme_dark_error_blue">#FFB4A9</color>
+    <color name="md_theme_dark_errorContainer_blue">#930006</color>
+    <color name="md_theme_dark_onError_blue">#680003</color>
+    <color name="md_theme_dark_onErrorContainer_blue">#FFDAD4</color>
+    <color name="md_theme_dark_background_blue">#191C1C</color>
+    <color name="md_theme_dark_onBackground_blue">#E1E3E2</color>
+    <color name="md_theme_dark_surface_blue">#191C1C</color>
+    <color name="md_theme_dark_onSurface_blue">#E1E3E2</color>
+    <color name="md_theme_dark_surfaceVariant_blue">#3F4947</color>
+    <color name="md_theme_dark_onSurfaceVariant_blue">#BEC9C7</color>
+    <color name="md_theme_dark_outline_blue">#889391</color>
+    <color name="md_theme_dark_inverseOnSurface_blue">#191C1C</color>
+    <color name="md_theme_dark_inverseSurface_blue">#E1E3E2</color>
+    <color name="md_theme_dark_inversePrimary_blue">#006A65</color>
+    <color name="md_theme_dark_shadow_blue">#000000</color>
+    <color name="md_theme_dark_primaryInverse_blue">#006A65</color>
+
+
 </resources>
