--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,59 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.MyQoranRemake" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+<resources>
+    <style name="AppTheme" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/md_theme_dark_primary_default</item>
+        <item name="colorOnPrimary">@color/md_theme_dark_onPrimary_default</item>
+        <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer_default</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_dark_onPrimaryContainer_default</item>
+        <item name="colorSecondary">@color/md_theme_dark_secondary_default</item>
+        <item name="colorOnSecondary">@color/md_theme_dark_onSecondary_default</item>
+        <item name="colorSecondaryContainer">@color/md_theme_dark_secondaryContainer_default</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer_default</item>
+        <item name="colorTertiary">@color/md_theme_dark_tertiary_default</item>
+        <item name="colorOnTertiary">@color/md_theme_dark_onTertiary_default</item>
+        <item name="colorTertiaryContainer">@color/md_theme_dark_tertiaryContainer_default</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_dark_onTertiaryContainer_default</item>
+        <item name="colorError">@color/md_theme_dark_error_default</item>
+        <item name="colorErrorContainer">@color/md_theme_dark_errorContainer_default</item>
+        <item name="colorOnError">@color/md_theme_dark_onError_default</item>
+        <item name="colorOnErrorContainer">@color/md_theme_dark_onErrorContainer_default</item>
+        <item name="android:colorBackground">@color/md_theme_dark_background_default</item>
+        <item name="colorOnBackground">@color/md_theme_dark_onBackground_default</item>
+        <item name="colorSurface">@color/md_theme_dark_surface_default</item>
+        <item name="colorOnSurface">@color/md_theme_dark_onSurface_default</item>
+        <item name="colorSurfaceVariant">@color/md_theme_dark_surfaceVariant_default</item>
+        <item name="colorOnSurfaceVariant">@color/md_theme_dark_onSurfaceVariant_default</item>
+        <item name="colorOutline">@color/md_theme_dark_outline_default</item>
+        <item name="colorOnSurfaceInverse">@color/md_theme_dark_inverseOnSurface_default</item>
+        <item name="colorSurfaceInverse">@color/md_theme_dark_inverseSurface_default</item>
+        <item name="colorPrimaryInverse">@color/md_theme_dark_primaryInverse_default</item>
+    </style>
+
+    <style name="AppThemeBlue" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/md_theme_dark_primary_blue</item>
+        <item name="colorOnPrimary">@color/md_theme_dark_onPrimary_blue</item>
+        <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer_blue</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_dark_onPrimaryContainer_blue</item>
+        <item name="colorSecondary">@color/md_theme_dark_secondary_blue</item>
+        <item name="colorOnSecondary">@color/md_theme_dark_onSecondary_blue</item>
+        <item name="colorSecondaryContainer">@color/md_theme_dark_secondaryContainer_blue</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer_blue</item>
+        <item name="colorTertiary">@color/md_theme_dark_tertiary_blue</item>
+        <item name="colorOnTertiary">@color/md_theme_dark_onTertiary_blue</item>
+        <item name="colorTertiaryContainer">@color/md_theme_dark_tertiaryContainer_blue</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_dark_onTertiaryContainer_blue</item>
+        <item name="colorError">@color/md_theme_dark_error_blue</item>
+        <item name="colorErrorContainer">@color/md_theme_dark_errorContainer_blue</item>
+        <item name="colorOnError">@color/md_theme_dark_onError_blue</item>
+        <item name="colorOnErrorContainer">@color/md_theme_dark_onErrorContainer_blue</item>
+        <item name="android:colorBackground">@color/md_theme_dark_background_blue</item>
+        <item name="colorOnBackground">@color/md_theme_dark_onBackground_blue</item>
+        <item name="colorSurface">@color/md_theme_dark_surface_blue</item>
+        <item name="colorOnSurface">@color/md_theme_dark_onSurface_blue</item>
+        <item name="colorSurfaceVariant">@color/md_theme_dark_surfaceVariant_blue</item>
+        <item name="colorOnSurfaceVariant">@color/md_theme_dark_onSurfaceVariant_blue</item>
+        <item name="colorOutline">@color/md_theme_dark_outline_blue</item>
+        <item name="colorOnSurfaceInverse">@color/md_theme_dark_inverseOnSurface_blue</item>
+        <item name="colorSurfaceInverse">@color/md_theme_dark_inverseSurface_blue</item>
+        <item name="colorPrimaryInverse">@color/md_theme_dark_primaryInverse_blue</item>
     </style>
 </resources>
