--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="AppThemeDefault" parent="Theme.Material3.Light.NoActionBar">
         <item name="colorPrimary">@color/md_theme_light_primary_default</item>
         <item name="colorOnPrimary">@color/md_theme_light_onPrimary_default</item>
@@ -28,11 +28,14 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_primaryInverse_default</item>
 
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
+
         <item name="colorBackground">#FFF</item>
         <item name="colorBookmarkContainer">@color/bookmarkContainerColorLight</item>
         <item name="colorBookmark">@color/bookmarkColor</item>
         <item name="colorRecentRead">@color/recentReadColor</item>
         <item name="colorRecentReadContainer">@color/recentReadColorContainerLight</item>
+        <item name="topAppbarColor">#FFF</item>
     </style>
 
     <style name="AppThemeBlue" parent="Theme.Material3.Light.NoActionBar">
@@ -64,10 +67,13 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_primaryInverse_blue</item>
 
         <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="Q">false</item>
+
         <item name="colorBackground">#FFF</item>
         <item name="colorBookmarkContainer">@color/bookmarkContainerColorLight</item>
         <item name="colorBookmark">@color/bookmarkColor</item>
         <item name="colorRecentRead">@color/recentReadColor</item>
         <item name="colorRecentReadContainer">@color/recentReadColorContainerLight</item>
+        <item name="topAppbarColor">#FFF</item>
     </style>
 </resources>
