--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,18 +18,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:padding="12dp"
-                android:layout_height="420dp"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:background="?selectableItemBackground"
-                    android:id="@+id/openDrawerBtn"
-                    android:layout_width="32dp"
-                    android:src="@drawable/ic_baseline_menu_24"
-                    android:layout_height="32dp"
-                    android:layout_marginBottom="12dp"
-                    app:tint="?colorOnBackground" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="12dp">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
@@ -38,6 +29,7 @@
                     android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/hijriDateTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Sekarang tanggal"
@@ -55,28 +47,32 @@
                         android:layout_width="match_parent"
                         android:layout_height="84dp"
                         android:layout_margin="8dp"
-                        android:backgroundTint="?colorRecentReadContainer"
                         android:layout_weight="1"
-                        android:background="?selectableItemBackground">
+                        android:background="?selectableItemBackground"
+                        android:backgroundTint="?colorRecentReadContainer">
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
 
                             <ImageView
-                                android:layout_margin="2dp"
                                 android:id="@+id/lastReadIcon"
                                 android:layout_width="32dp"
                                 android:layout_height="32dp"
                                 android:layout_alignParentStart="true"
                                 android:layout_alignParentTop="true"
-                                android:src="@drawable/ic_baseline_access_time_filled_24"
+                                android:layout_marginStart="2dp"
+                                android:layout_marginTop="2dp"
+                                android:layout_marginEnd="2dp"
+                                android:layout_marginBottom="2dp"
+                                android:src="@drawable/ic_baseline_history_24"
                                 app:tint="?colorRecentRead" />
 
                             <com.google.android.material.textview.MaterialTextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="6dp"
                                 android:layout_marginStart="6dp"
+                                android:layout_marginTop="6dp"
                                 android:layout_toRightOf="@id/lastReadIcon"
                                 android:text="@string/txt_recent_read"
                                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
@@ -99,11 +95,13 @@
                         android:layout_height="84dp"
                         android:layout_margin="8dp"
                         android:layout_weight="1"
-                        android:backgroundTint="?colorBookmarkContainer"
-                        android:background="?selectableItemBackground">
+                        android:background="?selectableItemBackground"
+                        android:backgroundTint="?colorBookmarkContainer">
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent">
+
                             <ImageView
                                 android:id="@+id/bookmarkIcon"
                                 android:layout_width="32dp"
@@ -112,79 +110,87 @@
                                 android:layout_alignParentTop="true"
                                 android:src="@drawable/ic_baseline_bookmark_24"
                                 app:tint="?colorBookmark" />
+
                             <com.google.android.material.textview.MaterialTextView
-                                android:layout_toRightOf="@id/bookmarkIcon"
                                 android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_marginTop="6dp"
-                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                                android:textColor="?colorBookmark"
+                                android:layout_toRightOf="@id/bookmarkIcon"
                                 android:text="Bookmark"
-                                android:layout_height="wrap_content"/>
+                                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                                android:textColor="?colorBookmark" />
                         </RelativeLayout>
                     </com.google.android.material.card.MaterialCardView>
                 </LinearLayout>
 
                 <com.google.android.material.card.MaterialCardView
-                    android:layout_width="match_parent"
-                    android:layout_margin="8dp"
-                    android:background="?selectableItemBackground"
                     style="@style/Widget.Material3.CardView.Elevated"
-                    android:layout_height="100dp"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:layout_margin="8dp"
+                    android:background="?selectableItemBackground" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:gravity="center_horizontal"
-                    android:text="@string/txt_slide_down_pls"
-                    android:layout_height="wrap_content"/>
+                    android:text="@string/txt_slide_down_pls" />
+
                 <ImageView
                     android:layout_width="12dp"
+                    android:layout_height="12dp"
                     android:layout_gravity="center_horizontal"
                     android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-                    android:layout_height="12dp"
                     app:tint="?colorOnBackground" />
             </LinearLayout>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-        <com.google.android.material.card.MaterialCardView
+
+        <LinearLayout
             android:layout_width="match_parent"
-            app:cardElevation="12dp"
-            android:backgroundTint="?colorBackground"
-            style="@style/Widget.Material3.CardView.Elevated"
-            android:layout_height="wrap_content">
-            <LinearLayout
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tabLayout"
+                android:layout_height="56dp"
+                android:layout_centerInParent="true"
+                app:tabMode="fixed">
+
+                <com.google.android.material.tabs.TabItem
                     android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:layout_centerInParent="true"
-                    app:tabMode="fixed">
+                    android:layout_height="wrap_content"
+                    android:text="Surah" />
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Surah" />
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jozz" />
 
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Jozz" />
-
-                    <com.google.android.material.tabs.TabItem
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Page" />
-                </com.google.android.material.tabs.TabLayout>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.tabs.TabItem
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Page" />
+            </com.google.android.material.tabs.TabLayout>
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        style="@style/Widget.Material3.FloatingActionButton.Secondary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_baseline_keyboard_double_arrow_up_24"
+        android:visibility="gone"
+        app:layout_anchorGravity="bottom" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
