--- a/app/src/main/res/layout/fragment_index_page.xml
+++ b/app/src/main/res/layout/fragment_index_page.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <com.l4digital.fastscroll.FastScrollView
+    <com.l4digital.fastscroll.FastScrollRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         app:bubbleSize="small"
