--- a/app/src/main/res/layout/item_index_surah.xml
+++ b/app/src/main/res/layout/item_index_surah.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/clickableCardView"
         android:layout_width="match_parent"
         android:layout_margin="6dp"
         style="@style/Widget.Material3.CardView.Elevated"
@@ -14,7 +15,7 @@
             android:layout_height="90dp">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/txt_nama_surah"
+                android:id="@+id/txt_surah_name_en"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -49,15 +50,20 @@
                     android:layout_marginStart="12dp"
                     android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
             </LinearLayout>
+
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/txt_surahNameAr"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_margin="28dp"
-                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/usmani_font"
                 android:text="الفَاتِحة"
-                android:layout_height="wrap_content"/>
+                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />
         </RelativeLayout>
     </com.google.android.material.card.MaterialCardView>
 
