--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,24 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
-    <item
-        android:id="@+id/submenu_main_feature"
-        android:title="@string/txt_main_feature"
-        >
-        <menu>
-            <item
-                android:id="@+id/nav_home"
-                android:icon="@drawable/ic_menu_read"
-                android:title="@string/menu_read" />
-            <item
-                android:id="@+id/nav_settings"
-                android:icon="@drawable/ic_menu_settings"
-                android:title="@string/menu_settings" />
-            <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/ic_menu_about"
-                android:title="@string/menu_about" />
-        </menu>
-    </item>
+    <group android:checkableBehavior="single" android:enabled="true">
+        <item
+            android:id="@+id/nav_home"
+            android:icon="@drawable/ic_menu_read"
+            android:title="@string/menu_read" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_settings"
+            android:title="@string/menu_settings" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_menu_about"
+            android:title="@string/menu_about" />
+    </group>
 </menu>
