--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -123,4 +123,12 @@
     <color name="recentReadColorDark">#ffdcb9</color>
     <color name="recentReadColorContainerLight">#ffdcb9</color>
     <color name="recentReadColorContainerDark">#693c00</color>
+
+    <!--  Tajweed  -->
+    <color name="color_ghunna">#9c404b</color>
+    <color name="color_qalqala">#552fff</color>
+    <color name="color_iqlab">#006684</color>
+    <color name="color_idgham">#ad3130</color>
+    <color name="color_idghamwo">#8c4382</color>
+    <color name="color_ikhfa">#2b6c00</color>
 </resources>
