--- a/app/src/main/res/layout/item_index_page.xml
+++ b/app/src/main/res/layout/item_index_page.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/clickableCardView"
         android:layout_width="match_parent"
         android:layout_margin="6dp"
         style="@style/Widget.Material3.CardView.Elevated"
