--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,6 +77,7 @@
                                 android:layout_marginTop="6dp"
                                 android:layout_toRightOf="@id/lastReadIcon"
                                 android:text="@string/txt_recent_read"
+                                android:textStyle="bold"
                                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                                 android:textColor="?colorRecentRead" />
 
@@ -125,6 +126,19 @@
                                 android:layout_toRightOf="@id/bookmarkIcon"
                                 android:text="Bookmark"
                                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+                                android:textColor="?colorBookmark"
+                                android:textStyle="bold" />
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/txt_bookmark_total"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:layout_marginStart="12dp"
+                                android:layout_marginTop="12dp"
+                                android:layout_marginEnd="12dp"
+                                android:layout_marginBottom="12dp"
+                                android:text="Total Bookmark:"
+                                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                                 android:textColor="?colorBookmark" />
                         </RelativeLayout>
                     </com.google.android.material.card.MaterialCardView>
@@ -141,12 +155,17 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
+
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginEnd="12dp"
+                            android:textStyle="bold"
+                            android:layout_marginBottom="12dp"
                             android:text="Jadwal Sholat"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:layout_margin="12dp"
-                            android:layout_height="wrap_content"/>
+                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
                         <ImageView
                             app:tint="?colorOnBackground"
@@ -161,12 +180,16 @@
                             android:src="@drawable/ic_baseline_access_time_filled_24" />
 
                         <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/txt_gap_between_prayer_times"
                             android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:text="10 menit lagi menuju ashar"
-                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-                            android:layout_margin="12dp"
-                            android:layout_height="wrap_content"/>
+                            android:layout_marginStart="12dp"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginEnd="12dp"
+                            android:layout_marginBottom="12dp"
+                            android:text="--:--"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </RelativeLayout>
                 </com.google.android.material.card.MaterialCardView>
 
