--- a/app/src/main/res/layout/item_read_quran.xml
+++ b/app/src/main/res/layout/item_read_quran.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/item_container"
     android:padding="8dp"
     android:layout_height="wrap_content">
 
