--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/txt_empty_bookmark"
+        android:layout_margin="12dp"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
+        android:layout_width="match_parent"
+        android:text="@string/txt_bookmark_empty"
+        android:layout_height="wrap_content"/>
+
+    <com.l4digital.fastscroll.FastScrollRecyclerView
+        android:id="@+id/recycler_view_bookmark"
+        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        app:bubbleColor="?colorPrimary"
+        tools:listitem="@layout/item_bookmark"
+        app:bubbleTextColor="?colorOnPrimary"
+        app:bubbleSize="small"
+        android:layout_height="match_parent" />
+
+</RelativeLayout>
