Added search implementation

--- a/app/src/main/res/layout/fragment_read_quran.xml
+++ b/app/src/main/res/layout/fragment_read_quran.xml
@@ -29,8 +29,7 @@
         app:layout_anchor="@id/bottom_appbar"
         android:layout_height="wrap_content"
         app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
-        android:src="@drawable/ic_baseline_close_24"
-        android:contentDescription="Play Button" />
+        android:src="@drawable/ic_baseline_close_24" />
 
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottom_appbar"
@@ -38,7 +37,7 @@
         app:fabAlignmentMode="end"
         app:fabAnimationMode="slide"
         android:layout_gravity="bottom"
-        app:menu="@menu/play_menu"
+        app:menu="@menu/menu_player"
         app:hideOnScroll="true"
         app:layout_behavior="com.google.android.material.bottomappbar.BottomAppBar$Behavior"
         android:layout_height="wrap_content"/>
