--- a/app/src/main/res/layout/fragment_search_ayah.xml
+++ b/app/src/main/res/layout/fragment_search_ayah.xml
@@ -15,6 +15,7 @@
             app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
             android:layout_height="wrap_content">
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/txt_input_query_search_ayah"
                 android:layout_width="match_parent"
                 app:boxStrokeWidth="0dp"
                 android:layout_height="wrap_content">
@@ -23,10 +24,12 @@
                     android:hint="@string/txt_search_ayah"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionSearch"
                     />
             </com.google.android.material.textfield.TextInputLayout>
-
         </com.google.android.material.appbar.MaterialToolbar>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.l4digital.fastscroll.FastScrollRecyclerView
