--- a/app/src/main/res/layout/item_search_ayah.xml
+++ b/app/src/main/res/layout/item_search_ayah.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:padding="8dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content">
@@ -29,6 +30,11 @@
         android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
         android:layout_margin="12dp"
         tools:text="QS: Surah Al-Fatihah: 1"
+        android:layout_height="wrap_content"/>
+
+    <com.google.android.material.divider.MaterialDivider
+        android:layout_width="match_parent"
+        android:layout_margin="12dp"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
