--- a/app/src/main/res/layout/item_search_surah.xml
+++ b/app/src/main/res/layout/item_search_surah.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:padding="8dp"
     android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
