--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,9 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_menu_read"
             android:title="@string/menu_read" />
+        <item android:id="@+id/nav_kibla"
+            android:icon="@drawable/ic_kaaba"
+            android:title="@string/menu_kiblat"/>
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
